# pycfb

./: .gitignore  LICENSE  README.md  pyproject.toml
pycfb/: __init__.py  cfbutility.py  constants.py  context.py  difat.py  directory.py  enums.py  fat.py  header.py  minifat.py  ministream.py  stream.py  types.py  util.py
tests/: pycfb_test.py
